--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserBasicInfoTableViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserBasicInfoTableViewController.storyboard
@@ -38,13 +38,13 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ne-1y-09a">
-                                            <rect key="frame" x="24" y="32" width="290" height="19.5"/>
+                                            <rect key="frame" x="24" y="32.5" width="290" height="19.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Uf-Pg-bZl">
-                                            <rect key="frame" x="326" y="20" width="38" height="19.5"/>
+                                            <rect key="frame" x="326" y="20.5" width="38" height="19.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -56,16 +56,26 @@
                                                 <constraint firstAttribute="width" constant="30" id="mAo-wg-tlr"/>
                                             </constraints>
                                         </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wxg-GI-cZG">
+                                            <rect key="frame" x="24" y="59" width="390" height="1"/>
+                                            <color key="backgroundColor" white="0.94999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="LGm-Ud-KLQ"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="uRm-cS-Ddf" firstAttribute="top" secondItem="2XP-YT-8mC" secondAttribute="top" constant="8" id="JBO-fA-3Cm"/>
+                                        <constraint firstAttribute="bottom" secondItem="Wxg-GI-cZG" secondAttribute="bottom" id="LnT-Sl-Th2"/>
                                         <constraint firstItem="6Uf-Pg-bZl" firstAttribute="leading" secondItem="uRm-cS-Ddf" secondAttribute="trailing" constant="12" id="U1b-5s-dyp"/>
                                         <constraint firstItem="5ne-1y-09a" firstAttribute="leading" secondItem="uRm-cS-Ddf" secondAttribute="leading" id="dW1-gS-x1U"/>
                                         <constraint firstItem="3ge-NQ-MU7" firstAttribute="leading" secondItem="6Uf-Pg-bZl" secondAttribute="trailing" constant="8" id="hHx-kB-nLX"/>
+                                        <constraint firstAttribute="trailing" secondItem="Wxg-GI-cZG" secondAttribute="trailing" id="hX5-Gu-JeL"/>
                                         <constraint firstAttribute="trailing" secondItem="3ge-NQ-MU7" secondAttribute="trailing" constant="12" id="j9z-3S-hwr"/>
                                         <constraint firstItem="5ne-1y-09a" firstAttribute="trailing" secondItem="uRm-cS-Ddf" secondAttribute="trailing" id="oXS-NR-LbF"/>
                                         <constraint firstItem="3ge-NQ-MU7" firstAttribute="centerY" secondItem="2XP-YT-8mC" secondAttribute="centerY" id="pxj-X3-GRF"/>
                                         <constraint firstItem="6Uf-Pg-bZl" firstAttribute="centerY" secondItem="3ge-NQ-MU7" secondAttribute="centerY" id="r25-AA-Bj1"/>
+                                        <constraint firstItem="Wxg-GI-cZG" firstAttribute="leading" secondItem="uRm-cS-Ddf" secondAttribute="leading" id="rPS-se-CuU"/>
                                         <constraint firstItem="uRm-cS-Ddf" firstAttribute="leading" secondItem="2XP-YT-8mC" secondAttribute="leading" constant="24" id="umg-cZ-hnq"/>
                                         <constraint firstAttribute="bottom" secondItem="5ne-1y-09a" secondAttribute="bottom" constant="8" id="xv7-yN-sv6"/>
                                     </constraints>
@@ -85,7 +95,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xzW-hW-2bp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="239" y="155"/>
+            <point key="canvasLocation" x="237.68115942028987" y="154.6875"/>
         </scene>
     </scenes>
     <resources>
