--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserBasicInfoTableViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserBasicInfoTableViewController.storyboard
@@ -49,7 +49,7 @@
                                             <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3ge-NQ-MU7">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-forward-arrow" translatesAutoresizingMaskIntoConstraints="NO" id="3ge-NQ-MU7">
                                             <rect key="frame" x="372" y="15" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="3ge-NQ-MU7" secondAttribute="height" multiplier="1:1" id="LHR-ym-IkP"/>
@@ -99,6 +99,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icon-forward-arrow" width="96" height="96"/>
         <namedColor name="primaryTextColor">
             <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
