--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserMoreDetailsTableViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserMoreDetailsTableViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GiZ-Uu-RTq">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,70 +16,90 @@
     </customFonts>
     <scenes>
         <!--User More Details Table View Controller-->
-        <scene sceneID="J21-du-TbN">
+        <scene sceneID="h1x-eU-UyF">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Exc-jh-ZzH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="SiW-GE-6sA" customClass="UserMoreDetailsTableViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6ib-1W-ruP">
+                <viewController id="GiZ-Uu-RTq" customClass="UserMoreDetailsTableViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="P7U-Es-JCf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="YcX-5M-MIc">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="InfoItemTVC" rowHeight="60" id="vYc-cZ-5lv" customClass="InfoItemTableViewCell" customModule="Pear" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YcX-5M-MIc" id="OFd-i7-TOD">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vYc-cZ-5lv" id="xYu-PI-ORP">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIo-Xt-p7D">
-                                            <rect key="frame" x="24" y="8" width="290" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7q-cr-Bdc">
+                                            <rect key="frame" x="24" y="8" width="290" height="19.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <color key="textColor" name="primaryTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W4v-Od-Int">
-                                            <rect key="frame" x="24" y="31.5" width="290" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pi4-3R-l7m">
+                                            <rect key="frame" x="24" y="32.5" width="290" height="19.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHn-BD-bKF">
-                                            <rect key="frame" x="326" y="20" width="38" height="19.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZRd-p0-wOz">
+                                            <rect key="frame" x="326" y="20.5" width="38" height="19.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EHM-Rq-q7b">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-forward-arrow" translatesAutoresizingMaskIntoConstraints="NO" id="yOO-99-DBq">
                                             <rect key="frame" x="372" y="15" width="30" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="30" id="Hof-KK-NXu"/>
-                                                <constraint firstAttribute="width" secondItem="EHM-Rq-q7b" secondAttribute="height" multiplier="1:1" id="eVc-Ou-BZT"/>
+                                                <constraint firstAttribute="width" secondItem="yOO-99-DBq" secondAttribute="height" multiplier="1:1" id="R3j-PU-o1n"/>
+                                                <constraint firstAttribute="width" constant="30" id="Ww2-n7-NU3"/>
                                             </constraints>
                                         </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rXB-rY-Wlu">
+                                            <rect key="frame" x="24" y="59" width="390" height="1"/>
+                                            <color key="backgroundColor" white="0.94999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="XBd-FX-aY6"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="W4v-Od-Int" firstAttribute="leading" secondItem="DIo-Xt-p7D" secondAttribute="leading" id="5cj-77-7Zs"/>
-                                        <constraint firstItem="EHM-Rq-q7b" firstAttribute="leading" secondItem="wHn-BD-bKF" secondAttribute="trailing" constant="8" id="FZd-5z-B3X"/>
-                                        <constraint firstItem="W4v-Od-Int" firstAttribute="trailing" secondItem="DIo-Xt-p7D" secondAttribute="trailing" id="K0E-Tf-6bX"/>
-                                        <constraint firstItem="DIo-Xt-p7D" firstAttribute="top" secondItem="OFd-i7-TOD" secondAttribute="top" constant="8" id="L86-G6-0U0"/>
-                                        <constraint firstItem="wHn-BD-bKF" firstAttribute="centerY" secondItem="EHM-Rq-q7b" secondAttribute="centerY" id="PcN-YO-UfG"/>
-                                        <constraint firstItem="EHM-Rq-q7b" firstAttribute="centerY" secondItem="OFd-i7-TOD" secondAttribute="centerY" id="RKR-uo-jqE"/>
-                                        <constraint firstItem="wHn-BD-bKF" firstAttribute="leading" secondItem="DIo-Xt-p7D" secondAttribute="trailing" constant="12" id="ZIz-Vo-6Uf"/>
-                                        <constraint firstItem="DIo-Xt-p7D" firstAttribute="leading" secondItem="OFd-i7-TOD" secondAttribute="leading" constant="24" id="sz6-dc-e1F"/>
-                                        <constraint firstAttribute="trailing" secondItem="EHM-Rq-q7b" secondAttribute="trailing" constant="12" id="wL8-3r-Kbr"/>
-                                        <constraint firstAttribute="bottom" secondItem="W4v-Od-Int" secondAttribute="bottom" constant="8" id="xYN-dl-yIL"/>
+                                        <constraint firstAttribute="trailing" secondItem="rXB-rY-Wlu" secondAttribute="trailing" id="1CK-ue-BAh"/>
+                                        <constraint firstItem="pi4-3R-l7m" firstAttribute="leading" secondItem="Z7q-cr-Bdc" secondAttribute="leading" id="1oj-SV-ddR"/>
+                                        <constraint firstItem="yOO-99-DBq" firstAttribute="centerY" secondItem="xYu-PI-ORP" secondAttribute="centerY" id="3yM-eY-VnI"/>
+                                        <constraint firstAttribute="trailing" secondItem="yOO-99-DBq" secondAttribute="trailing" constant="12" id="7Pi-ya-rWE"/>
+                                        <constraint firstItem="ZRd-p0-wOz" firstAttribute="leading" secondItem="Z7q-cr-Bdc" secondAttribute="trailing" constant="12" id="7XJ-dP-E0s"/>
+                                        <constraint firstItem="rXB-rY-Wlu" firstAttribute="leading" secondItem="Z7q-cr-Bdc" secondAttribute="leading" id="ATU-Cl-jv4"/>
+                                        <constraint firstItem="ZRd-p0-wOz" firstAttribute="centerY" secondItem="yOO-99-DBq" secondAttribute="centerY" id="Aux-1e-1im"/>
+                                        <constraint firstItem="yOO-99-DBq" firstAttribute="leading" secondItem="ZRd-p0-wOz" secondAttribute="trailing" constant="8" id="WtC-pm-RRK"/>
+                                        <constraint firstItem="Z7q-cr-Bdc" firstAttribute="leading" secondItem="xYu-PI-ORP" secondAttribute="leading" constant="24" id="Y8W-za-eKx"/>
+                                        <constraint firstAttribute="bottom" secondItem="rXB-rY-Wlu" secondAttribute="bottom" id="jec-Ev-NaJ"/>
+                                        <constraint firstAttribute="bottom" secondItem="pi4-3R-l7m" secondAttribute="bottom" constant="8" id="nE4-Zv-aRO"/>
+                                        <constraint firstItem="pi4-3R-l7m" firstAttribute="trailing" secondItem="Z7q-cr-Bdc" secondAttribute="trailing" id="rJj-b6-x2X"/>
+                                        <constraint firstItem="Z7q-cr-Bdc" firstAttribute="top" secondItem="xYu-PI-ORP" secondAttribute="top" constant="8" id="sTJ-dU-DEw"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="fieldNameLabel" destination="Z7q-cr-Bdc" id="4dh-v3-GVU"/>
+                                    <outlet property="infoImageView" destination="yOO-99-DBq" id="d8s-G5-RLa"/>
+                                    <outlet property="subtitleLabel" destination="pi4-3R-l7m" id="ahf-jp-mQE"/>
+                                    <outlet property="visibilityLabel" destination="ZRd-p0-wOz" id="rqQ-rd-I15"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                     </tableView>
+                    <connections>
+                        <outlet property="tableView" destination="P7U-Es-JCf" id="hNs-ZW-3fC"/>
+                    </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4AH-ay-1HU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="239" y="155"/>
+            <point key="canvasLocation" x="237.68115942028987" y="154.6875"/>
         </scene>
     </scenes>
     <resources>
+        <image name="icon-forward-arrow" width="96" height="96"/>
         <namedColor name="primaryTextColor">
             <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
