--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/User Name Input/UserNameInputViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/User Name Input/UserNameInputViewController.storyboard
@@ -38,7 +38,7 @@
                                             <action selector="backButtonClicked:" destination="Fe0-XT-3RT" eventType="touchUpInside" id="cIg-Kn-26I"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Basic Info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vEY-59-wnn">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vEY-59-wnn">
                                         <rect key="frame" x="60" y="8.5" width="294" height="33"/>
                                         <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
                                         <nil key="textColor"/>
