--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/Simple Field Input/SimpleFieldInputViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/Simple Field Input/SimpleFieldInputViewController.storyboard
@@ -45,7 +45,7 @@
                                         <rect key="frame" x="12" y="4" width="311" height="42"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
